objects/echosign_dev1__SIGN_File_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Map_on_Events__c</fullName>
        <label>Map on Events</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled / Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out for Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Counter-Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Counter-Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__SIGN_Object_Mapping__c</fullName>
        <label>EchoSign Object Mapping</label>
        <referenceTo>echosign_dev1__SIGN_Object_Mapping__c</referenceTo>
        <relationshipLabel>EchoSign File Mappings</relationshipLabel>
        <relationshipName>File_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Source_Type__c</fullName>
        <label>Source Type</label>
        <picklist>
            <picklistValues>
                <fullName>Signed Agreement - Merged PDF</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Signed Agreement - Separate PDFs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Trail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supporting Documents</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Target_Field_Name__c</fullName>
        <label>Target Salesforce Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Target_Type__c</fullName>
        <label>Target Type</label>
        <picklist>
            <picklistValues>
                <fullName>Attach file directly to object</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Add a reference link to the file</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>EchoSign File Mapping</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>EchoSign File Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EchoSign File Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>